# streamlit-demo-for-code-club

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
pages/: exploration.py  forecast.py  home.py
