[project]
name = "code-club"
version = "1.0.0"
description = "The webpage for SCW's Code Club."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "great-tables>=0.17.0",
    "jinja2>=3.1.6",
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "polars>=1.25.2",
    "prophet>=1.1.7",
    "pyyaml>=6.0.2",
    "quarto>=0.1.0",
    "rsconnect-python>=1.25.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "skimpy>=0.0.18",
    "statsmodels>=0.14.5",
    "streamlit-pandas-profiling>=0.1.3",
    "streamlit>=1.47.1",
]
